simplify summary statistics prior to ttest_rel

--- a/2-soccer-db/eu-soccer-db.ipynb
+++ b/2-soccer-db/eu-soccer-db.ipynb
@@ -2234,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2301,29 +2301,25 @@
    "source": [
     "labels = list(home_and_away.index)\n",
     "\n",
-    "\n",
     "esp = home_and_away[['spain_home','spain_away']]\n",
-    "esp_plot = esp.plot(title=\"Home and Away Goals Over Time Spain\")\n",
+    "esp.plot(title=\"Home and Away Goals Over Time Spain\")\n",
     "plt.xticks(rotation = 45)\n",
-    "plt.show();\n",
     "\n",
     "gba = home_and_away[['england_home','england_away']]\n",
-    "gba_plot = gba.plot(title=\"Home and Away Goals Over Time England\")\n",
+    "gba.plot(title=\"Home and Away Goals Over Time England\")\n",
     "plt.xticks(rotation = 45)\n",
-    "plt.show();\n",
     "\n",
     "itl = home_and_away[['italy_home','italy_away']]\n",
-    "itl_plot = itl.plot(title=\"Home and Away Goals Over Time Italy\")\n",
+    "itl.plot(title=\"Home and Away Goals Over Time Italy\")\n",
     "plt.xticks(rotation = 45)\n",
-    "plt.show();\n",
     "\n",
     "ale = home_and_away[['germany_home','germany_away']]\n",
-    "ale_plot = ale.plot(title=\"Home and Away Goals Over Time Germany\")\n",
+    "ale.plot(title=\"Home and Away Goals Over Time Germany\")\n",
     "plt.xticks(rotation = 45)\n",
-    "plt.show();\n",
+    "\n",
     "\n",
     "fra = home_and_away[['france_home','france_away']]\n",
-    "fra_plot = fra.plot(title=\"Home and Away Goals Over Time France\")\n",
+    "fra.plot(title=\"Home and Away Goals Over Time France\")\n",
     "plt.xticks(rotation = 45)\n",
     "plt.show();"
    ]
@@ -2335,174 +2331,25 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>spain_home</th>\n",
-       "      <th>spain_away</th>\n",
-       "      <th>england_home</th>\n",
-       "      <th>england_away</th>\n",
-       "      <th>italy_home</th>\n",
-       "      <th>italy_away</th>\n",
-       "      <th>germany_home</th>\n",
-       "      <th>germany_away</th>\n",
-       "      <th>france_home</th>\n",
-       "      <th>france_away</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2008/2009</th>\n",
-       "      <td>615</td>\n",
-       "      <td>428</td>\n",
-       "      <td>567</td>\n",
-       "      <td>459</td>\n",
-       "      <td>559</td>\n",
-       "      <td>420</td>\n",
-       "      <td>479</td>\n",
-       "      <td>387</td>\n",
-       "      <td>546</td>\n",
-       "      <td>414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009/2010</th>\n",
-       "      <td>584</td>\n",
-       "      <td>425</td>\n",
-       "      <td>560</td>\n",
-       "      <td>415</td>\n",
-       "      <td>568</td>\n",
-       "      <td>450</td>\n",
-       "      <td>486</td>\n",
-       "      <td>357</td>\n",
-       "      <td>536</td>\n",
-       "      <td>411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010/2011</th>\n",
-       "      <td>620</td>\n",
-       "      <td>425</td>\n",
-       "      <td>598</td>\n",
-       "      <td>454</td>\n",
-       "      <td>584</td>\n",
-       "      <td>451</td>\n",
-       "      <td>535</td>\n",
-       "      <td>432</td>\n",
-       "      <td>538</td>\n",
-       "      <td>395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011/2012</th>\n",
-       "      <td>641</td>\n",
-       "      <td>450</td>\n",
-       "      <td>592</td>\n",
-       "      <td>471</td>\n",
-       "      <td>568</td>\n",
-       "      <td>435</td>\n",
-       "      <td>487</td>\n",
-       "      <td>411</td>\n",
-       "      <td>558</td>\n",
-       "      <td>409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012/2013</th>\n",
-       "      <td>638</td>\n",
-       "      <td>412</td>\n",
-       "      <td>604</td>\n",
-       "      <td>462</td>\n",
-       "      <td>541</td>\n",
-       "      <td>384</td>\n",
-       "      <td>508</td>\n",
-       "      <td>367</td>\n",
-       "      <td>560</td>\n",
-       "      <td>396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013/2014</th>\n",
-       "      <td>622</td>\n",
-       "      <td>420</td>\n",
-       "      <td>617</td>\n",
-       "      <td>446</td>\n",
-       "      <td>544</td>\n",
-       "      <td>411</td>\n",
-       "      <td>504</td>\n",
-       "      <td>390</td>\n",
-       "      <td>510</td>\n",
-       "      <td>380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014/2015</th>\n",
-       "      <td>608</td>\n",
-       "      <td>423</td>\n",
-       "      <td>645</td>\n",
-       "      <td>408</td>\n",
-       "      <td>586</td>\n",
-       "      <td>406</td>\n",
-       "      <td>463</td>\n",
-       "      <td>403</td>\n",
-       "      <td>528</td>\n",
-       "      <td>388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015/2016</th>\n",
-       "      <td>631</td>\n",
-       "      <td>470</td>\n",
-       "      <td>532</td>\n",
-       "      <td>410</td>\n",
-       "      <td>578</td>\n",
-       "      <td>410</td>\n",
-       "      <td>520</td>\n",
-       "      <td>374</td>\n",
-       "      <td>489</td>\n",
-       "      <td>369</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           spain_home  spain_away  england_home  england_away  italy_home  \\\n",
-       "2008/2009         615         428           567           459         559   \n",
-       "2009/2010         584         425           560           415         568   \n",
-       "2010/2011         620         425           598           454         584   \n",
-       "2011/2012         641         450           592           471         568   \n",
-       "2012/2013         638         412           604           462         541   \n",
-       "2013/2014         622         420           617           446         544   \n",
-       "2014/2015         608         423           645           408         586   \n",
-       "2015/2016         631         470           532           410         578   \n",
-       "\n",
-       "           italy_away  germany_home  germany_away  france_home  france_away  \n",
-       "2008/2009         420           479           387          546          414  \n",
-       "2009/2010         450           486           357          536          411  \n",
-       "2010/2011         451           535           432          538          395  \n",
-       "2011/2012         435           487           411          558          409  \n",
-       "2012/2013         384           508           367          560          396  \n",
-       "2013/2014         411           504           390          510          380  \n",
-       "2014/2015         406           463           403          528          388  \n",
-       "2015/2016         410           520           374          489          369  "
+       "count     40.000000\n",
+       "mean     561.225000\n",
+       "std       49.008889\n",
+       "min      463.000000\n",
+       "25%      531.000000\n",
+       "50%      560.000000\n",
+       "75%      599.500000\n",
+       "max      645.000000\n",
+       "Name: home_goals, dtype: float64"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(home_and_away)"
+    "goals_by_season['home_goals'].describe()"
    ]
   },
   {
@@ -2511,142 +2358,40 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "561.225\n",
-      "415.7\n"
-     ]
-    }
-   ],
-   "source": [
-    "# average home goals/season\n",
-    "hgs = (home_and_away['spain_home'].sum() + home_and_away['england_home'].sum() + \n",
-    " home_and_away['italy_home'].sum() + home_and_away['germany_home'].sum() + \n",
-    " home_and_away['france_home'].sum()) / 40\n",
-    "\n",
-    "#average away goals/season\n",
-    "ags = (home_and_away['spain_away'].sum() + home_and_away['england_away'].sum() + \n",
-    " home_and_away['italy_away'].sum() + home_and_away['germany_away'].sum() + \n",
-    " home_and_away['france_away'].sum()) / 40\n",
-    "\n",
-    "print(hgs)\n",
-    "print(ags)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>home</th>\n",
-       "      <th>away</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2008/2009</th>\n",
-       "      <td>2766</td>\n",
-       "      <td>2108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009/2010</th>\n",
-       "      <td>2734</td>\n",
-       "      <td>2058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010/2011</th>\n",
-       "      <td>2875</td>\n",
-       "      <td>2157</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011/2012</th>\n",
-       "      <td>2846</td>\n",
-       "      <td>2176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012/2013</th>\n",
-       "      <td>2851</td>\n",
-       "      <td>2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013/2014</th>\n",
-       "      <td>2797</td>\n",
-       "      <td>2047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014/2015</th>\n",
-       "      <td>2830</td>\n",
-       "      <td>2028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015/2016</th>\n",
-       "      <td>2750</td>\n",
-       "      <td>2033</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           home  away\n",
-       "2008/2009  2766  2108\n",
-       "2009/2010  2734  2058\n",
-       "2010/2011  2875  2157\n",
-       "2011/2012  2846  2176\n",
-       "2012/2013  2851  2021\n",
-       "2013/2014  2797  2047\n",
-       "2014/2015  2830  2028\n",
-       "2015/2016  2750  2033"
+       "count     40.000000\n",
+       "mean     415.700000\n",
+       "std       28.936004\n",
+       "min      357.000000\n",
+       "25%      395.750000\n",
+       "50%      411.500000\n",
+       "75%      432.750000\n",
+       "max      471.000000\n",
+       "Name: away_goals, dtype: float64"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "home_cols = ['spain_home', 'england_home', 'italy_home', 'germany_home', 'france_home']\n",
-    "away_cols = ['spain_away', 'england_away', 'italy_away', 'germany_away', 'france_away']\n",
-    "\n",
-    "yearly_totals = pd.DataFrame()\n",
-    "yearly_totals['home'] = home_and_away[home_cols].sum(axis=1)\n",
-    "yearly_totals['away'] = home_and_away[away_cols].sum(axis=1)\n",
-    "display(yearly_totals)"
+    "goals_by_season['away_goals'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_relResult(statistic=32.80394281003485, pvalue=6.331864900106364e-09)"
+       "Ttest_relResult(statistic=25.06913120437287, pvalue=1.1627690933125479e-25)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2656,7 +2401,7 @@
     "\n",
     "from scipy.stats import ttest_rel\n",
     "\n",
-    "ttest_rel(yearly_totals['home'],yearly_totals['away'])"
+    "ttest_rel(goals_by_season['home_goals'], goals_by_season['away_goals'])"
    ]
   },
   {
